--- a/home-service-full-stack/backend/.env
+++ b/home-service-full-stack/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://admin:KdsGE6ccC1QsQECL@cluster0.olwct7w.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI="mongodb+srv://admin:KdsGE6ccC1QsQECL@cluster0.olwct7w.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT=3000
-JWT_SECRET="gfg_jwt_secret_key";
+JWT_SECRET="hOmEsErViCeAPP"
