--- a/home-service-full-stack/frontend/package.json
+++ b/home-service-full-stack/frontend/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.5.1",
     "dayjs": "^1.11.12",
     "formik": "^2.4.6",
+    "nodemon": "^3.1.4",
     "notistack": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
