--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "home-service-full-stack",
+    "name": "home-service-app",
     "version": "1.0.0",
     "description": "",
     "scripts": {
