--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-      "start": "cd backend && yarn && yarn build && yarn start",
-      "heroku-postbuild": "cd frontend && yarn && yarn build",
+      "start": "cd home-service-full-stack/backend && yarn && yarn build && yarn start",
+      "heroku-postbuild": "cd home-service-full-stack/frontend && yarn && yarn build",
       "deploy": "git push heroku main"
     },
     "engines": {
