--- a/home-service-full-stack/backend/package.json
+++ b/home-service-full-stack/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "@types/express": "^4.17.21",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
