--- a/home-service-full-stack/frontend/package.json
+++ b/home-service-full-stack/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.4",
     "@mui/x-date-pickers": "^7.11.0",
+    "@sendgrid/mail": "^8.1.3",
     "@tanstack/react-query": "^5.51.3",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
