--- a/home-service-full-stack/frontend/package.json
+++ b/home-service-full-stack/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.12",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "nodemon": "^3.1.4",
     "notistack": "^3.0.1",
