--- a/home-service-full-stack/backend/package.json
+++ b/home-service-full-stack/backend/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint .",
     "prettier": "npx prettier --write .",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ts-coverage": "typescript-coverage-report"
   },
   "keywords": [],
   "author": "",
