--- a/home-service-full-stack/frontend/package.json
+++ b/home-service-full-stack/frontend/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "test": "jest",
+    "ts-coverage": "typescript-coverage-report",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -16,6 +18,7 @@
     "@mui/x-date-pickers": "^7.11.0",
     "@sendgrid/mail": "^8.1.3",
     "@tanstack/react-query": "^5.51.3",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.12",
@@ -23,15 +26,21 @@
     "formik": "^2.4.6",
     "nodemon": "^3.1.4",
     "notistack": "^3.0.1",
+    "prettier": "^3.3.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "typescript-eslint-parser": "^22.0.0",
     "usehooks-ts": "^3.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "15.0.7",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/yup": "^0.32.0",
@@ -41,8 +50,16 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-transformer-svg": "^2.0.2",
     "sass": "^1.77.6",
-    "typescript": "^5.5.3",
-    "vite": "^5.3.1"
+    "ts-jest": "^29.2.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
+    "typescript-coverage-report": "^1.0.0",
+    "vite": "^5.3.1",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
