--- a/home-service-full-stack/frontend/package.json
+++ b/home-service-full-stack/frontend/package.json
@@ -28,6 +28,7 @@
     "notistack": "^3.0.1",
     "prettier": "^3.3.3",
     "prop-types": "^15.8.1",
+    "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
