--- a/home-service-full-stack/frontend/package.json
+++ b/home-service-full-stack/frontend/package.json
@@ -24,6 +24,8 @@
     "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
     "nodemon": "^3.1.4",
     "notistack": "^3.0.1",
     "prettier": "^3.3.3",
@@ -31,6 +33,7 @@
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.23.1",
     "typescript-eslint-parser": "^22.0.0",
