--- a/home-service-full-stack/frontend/.gitignore
+++ b/home-service-full-stack/frontend/.gitignore
@@ -11,8 +11,10 @@ node_modules
 dist
 dist-ssr
 *.local
-coverage
-coverage-ts
+
+# Test coverage
+coverage/
+coverage-ts/
 
 # Editor directories and files
 .vscode/*
