--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^22.10.7",
+    "@typescript-eslint/parser": "^8.21.0",
+    "csstype": "^3.1.3",
     "nodemon": "^3.1.4"
   }
 }
