--- a/home-service-full-stack/frontend/package.json
+++ b/home-service-full-stack/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^7.11.0",
     "@sendgrid/mail": "^8.1.3",
     "@tanstack/react-query": "^5.64.2",
+    "@testing-library/dom": "^10.4.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
@@ -41,14 +42,15 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "15.0.7",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/yup": "^0.32.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-absolute-imports": "^0.0.3",
@@ -61,7 +63,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-transformer-svg": "^2.0.2",
     "sass": "^1.77.6",
-    "ts-jest": "^29.2.4",
+    "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-coverage-report": "^1.0.0",
