--- a/home-service-full-stack/backend/package.json
+++ b/home-service-full-stack/backend/package.json
@@ -2,6 +2,10 @@
   "name": "app-auth",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "20.x",
+    "yarn": "1.x"
+  },
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon",
