--- a/home-service-full-stack/backend/package.json
+++ b/home-service-full-stack/backend/package.json
@@ -1,50 +1,35 @@
 {
-  "name": "app-auth",
+  "name": "home-service-backend",
   "version": "1.0.0",
   "main": "index.js",
-  "engines": {
-    "node": "20.x",
-    "yarn": "1.x"
-  },
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon",
-    "lint": "eslint .",
-    "prettier": "npx prettier --write .",
+    "dev": "ts-node-dev src/index.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "ts-coverage": "typescript-coverage-report"
+    "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@sendgrid/mail": "^8.1.3",
-    "@types/express": "^4.17.21",
+    "@sendgrid/mail": "^8.1.5",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "i18next": "^24.2.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.5.2"
+    "mongoose": "^7.6.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.7.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.10",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
-    "eslint": "^9.7.0",
-    "globals": "^15.8.0",
-    "nodemon": "^3.1.4",
-    "prettier": "^3.3.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^7.16.1"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.21",
+    "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
+  },
+  "resolutions": {
+    "@types/multer/@types/express": "^4.17.21"
   }
 }
