--- a/home-service-full-stack/backend/package.json
+++ b/home-service-full-stack/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "home-service-backend",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
