Removed yarn because pnpm is now being used

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "deploy": "git push heroku main"
   },
   "engines": {
-    "node": "20.x",
-    "yarn": "1.x"
+    "node": "20.x"
   },
   "keywords": [],
   "author": "",
