--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "cd home-service-full-stack/backend && pnpm && pnpm build && pnpm start",
     "heroku-postbuild": "cd home-service-full-stack/frontend && pnpm && pnpm build",
-    "deploy": "git push heroku main"
+    "deploy": "git push heroku main",
+    "prepare": "husky install"
   },
   "engines": {
     "node": "20.x"
@@ -18,5 +19,9 @@
     "@typescript-eslint/parser": "^8.21.0",
     "csstype": "^3.1.3",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.2"
   }
 }
