Added type checking

--- a/home-service-full-stack/backend/package.json
+++ b/home-service-full-stack/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/.eslintcache --ext .ts,.tsx ."
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/.eslintcache --ext .ts,.tsx .",
+    "types": "tsc --noEmit --project ./tsconfig.json"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
