--- a/home-service-full-stack/frontend/package.json
+++ b/home-service-full-stack/frontend/package.json
@@ -8,8 +8,9 @@
     "ts-coverage": "typescript-coverage-report",
     "dev": "vite",
     "build": "tsc && vite build",
+    "preview": "vite preview",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "types": "tsc --noEmit --project ./tsconfig.json && tsc --noEmit --project ./tsconfig.node.json"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -47,6 +48,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.18.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/yup": "^0.32.0",
@@ -67,9 +69,9 @@
     "sass": "^1.77.6",
     "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4",
+    "typescript": "^5.9.2",
     "typescript-coverage-report": "^1.0.0",
-    "vite": "^5.3.1",
+    "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.0.1"
   }
 }
