--- a/home-service-full-stack/frontend/tsconfig.json
+++ b/home-service-full-stack/frontend/tsconfig.json
@@ -16,9 +16,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src", // Add this line for import resolving
+    "baseUrl": "src",
     "paths": {
-      "@/*": ["*"] // Add this line for import resolving
+      "@/*": ["*"]
     }
   },
   "include": ["src", "./jest.setup.ts"],
