--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.2"
   },
+  "overrides": {
+    "@types/multer>@types/express": "^4.17.21"
+  },
   "lint-staged": {
     "*.{js,ts,tsx,jsx,json,md,css,scss,yml,yaml}": [
       "pnpm exec prettier --write"
