--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^22.10.7",
-    "@typescript-eslint/parser": "^8.21.0",
     "csstype": "^3.1.3",
     "nodemon": "^3.1.4",
     "prettier": "^3.6.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
     "concurrently": "^9.2.1",
+    "globals": "^16.4.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.2.2"
+    "lint-staged": "^16.2.2",
+    "typescript-eslint": "^8.45.0"
   },
   "overrides": {
     "@types/multer>@types/express": "^4.17.21"
