--- a/home-service-full-stack/frontend/package.json
+++ b/home-service-full-stack/frontend/package.json
@@ -30,7 +30,6 @@
     "formik": "^2.4.6",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
-    "nodemon": "^3.1.4",
     "notistack": "^3.0.1",
     "prettier": "^3.3.3",
     "prop-types": "^15.8.1",
@@ -54,6 +53,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/yup": "^0.32.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "@vitejs/plugin-react": "^4.3.1",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
