--- a/home-service-full-stack/frontend/package.json
+++ b/home-service-full-stack/frontend/package.json
@@ -54,6 +54,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/parser": "^8.45.0",
+    "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-react": "^4.3.1",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
