--- a/home-service-full-stack/frontend/package.json
+++ b/home-service-full-stack/frontend/package.json
@@ -56,6 +56,7 @@
     "@typescript-eslint/parser": "^8.45.0",
     "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -74,7 +75,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "typescript-coverage-report": "^1.0.0",
-    "vite": "^7.1.7",
+    "vite": "^7.1.9",
     "vite-tsconfig-paths": "^5.0.1"
   }
 }
