--- a/home-service-full-stack/frontend/package.json
+++ b/home-service-full-stack/frontend/package.json
@@ -58,6 +58,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-absolute-imports": "^0.0.3",
