--- a/home-service-full-stack/backend/package.json
+++ b/home-service-full-stack/backend/package.json
@@ -33,7 +33,9 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "globals": "^16.4.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.45.0"
   }
